# alloy

./: .gitignore  LICENSE  README.md  alloy.cabal  blocks.md  cabal.project  demo.nix  flake.nix  hie.yaml  pkgs.nix  shell.nix  syntax.ayy
.github/workflows/: CI.yaml
app/: Main.hs
src/: Builtins.hs  CodeGen.hs  Coroutine.hs  Eval.hs  EvalTypes.hs  Evaluate.hs  Expr.hs  Lib.hs  Parse.hs  Parser.hs  Print.hs  Program.hs  Typecheck.hs
src/Eval/: BinOp.hs  Builtins.hs  Eval.hs  Lenses.hs  Lib.hs  Typecheck.hs  Types.hs
src/Lib/: Bound.hs  Fix.hs  Fresh.hs
src/Parser/: Lexer.hs  Lexer.x  Parsec.hs  Parser.hs  Parser.y  Token.hs  Tree.hs  Types.hs
src/Print/: Bifree.hs  Doc.hs  Printer.hs  Render.hs
test/: EvalTests.hs  RTTests.hs  Spec.hs  TestLib.hs
