cabal-version:   2.4
name:            alloy
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2021 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/alloy#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/alloy.git

common common-options
  build-depends:
    , base                >=4.9 && <5
    , containers
    , directory
    , filepath
    , hashable
    , haskeline
    , megaparsec
    , microlens-platform
    , mtl
    , parser-combinators
    , prettyprinter
    , union-find

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:             common-options
  hs-source-dirs:     src
  build-tool-depends: alex:alex -any, happy:happy -any

  -- array is a dep of alex-generated modueles
  build-depends:
    , array
    , bytestring
    , vector

  exposed-modules:
    Builtins
    Coroutine
    Eval
    Evaluate
    Expr
    Lib
    Parser
    Parser.Lexer
    Parser.Parsec
    Parser.Parser
    Print
    Program

  build-depends:

executable alloy-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , alloy
    , optparse-applicative

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite alloy-test
  import:          common-options
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test src
  main-is:         Spec.hs
  exposed-modules:
    EvalTests
    RTTests
    TestLib

  build-depends:
    , alloy
    , raw-strings-qq
    , tasty
    , tasty-expected-failure
    , tasty-focus
    , tasty-hunit
    , tasty-quickcheck

  ghc-options:     -threaded -rtsopts -with-rtsopts=-N

benchmark alloy-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , alloy
    , criterion

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
