cabal-version:   2.4
name:            alloy
version:         0
license:         BSD-3-Clause
build-type:      Simple
license-file:    LICENSE
author:          Jonas Carpay
maintainer:      Jonas Carpay <jonascarpay@gmail.com>
copyright:       2021 Jonas Carpay
tested-with:     GHC ==8.6.3 || ==8.8.3 || ==8.10.2
extra-doc-files:
  CHANGELOG.md
  README.md

-- category:
-- description:     description
-- synopsis:        one-line synopsis
-- homepage:        https://github.com/FIXME/alloy#readme
-- source-repository head
--   type:     git
--   location: git://github.com/FIXME/alloy.git

common common-options
  -- array is a dep of alex-generated modueles
  build-depends:
    , array
    , base                  >=4.9 && <5
    , bytestring
    , containers
    , directory
    , filepath
    , hashable
    , haskeline
    , microlens-platform
    , mtl
    , parser-combinators
    , pretty-simple
    , union-find
    , unordered-containers
    , vector

  default-language:   Haskell2010
  default-extensions: ImportQualifiedPost
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wpartial-fields

library
  import:             common-options
  hs-source-dirs:     src
  exposed-modules:
    Eval
    Eval.BinOp
    Eval.Builtins
    Eval.Lib
    Eval.Types
    Expr
    Parser.Lexer
    Parser.Parsec
    Parser.Parser
    Parser.Token
    Print

  build-tool-depends: alex:alex >=3.2.5

executable alloy-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , alloy
    , optparse-applicative

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite alloy-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test src

  -- hs-source-dirs: test
  main-is:        Spec.hs
  other-modules:
    EvalTests
    RTTests
    TestLib

  build-depends:
    , alloy
    , raw-strings-qq
    , tasty
    , tasty-expected-failure
    , tasty-focus
    , tasty-hunit
    , tasty-quickcheck

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

benchmark alloy-bench
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is:        Main.hs
  build-depends:
    , alloy
    , criterion

  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
